CHATS_SIT/force-app/main/default/objects/sfsit_t_emplmt_income_hist__x.object
<CustomObject>
    <description>sfsit$t_emplmt_income_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_emplmt_income_hist</externalName>
    <fields>
        <fullName>amt_exp_annual_actual__c</fullName>
        <description>amt_exp_annual_actual</description>
        <externalDeveloperName>amt_exp_annual_actual</externalDeveloperName>
        <label>Actual Annual Expenses</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_income_annual_actual__c</fullName>
        <description>amt_income_annual_actual</description>
        <externalDeveloperName>amt_income_annual_actual</externalDeveloperName>
        <label>Actual Annual Income</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_income_annual_estmd__c</fullName>
        <description>amt_income_annual_estmd</description>
        <externalDeveloperName>amt_income_annual_estmd</externalDeveloperName>
        <label>Estimated Anuual Income</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cde_freq_pay_estmd__c</fullName>
        <description>cde_freq_pay_estmd</description>
        <externalDeveloperName>cde_freq_pay_estmd</externalDeveloperName>
        <label>Estimated Frequency Pay Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnt_week_per_hours_actual__c</fullName>
        <description>cnt_week_per_hours_actual</description>
        <externalDeveloperName>cnt_week_per_hours_actual</externalDeveloperName>
        <label>Actual Hours per Week</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cnt_week_per_hours_estmd__c</fullName>
        <description>cnt_week_per_hours_estmd</description>
        <externalDeveloperName>cnt_week_per_hours_estmd</externalDeveloperName>
        <label>Estimated Hour Per Week</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dte_begin_effv__c</fullName>
        <description>dte_begin_effv</description>
        <externalDeveloperName>dte_begin_effv</externalDeveloperName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_end_effv__c</fullName>
        <description>dte_end_effv</description>
        <externalDeveloperName>dte_end_effv</externalDeveloperName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_client__c</fullName>
        <description>idn_client</description>
        <externalDeveloperName>idn_client</externalDeveloperName>
        <label>Client ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_emplmt_income__c</fullName>
        <description>idn_emplmt_income</description>
        <externalDeveloperName>idn_emplmt_income</externalDeveloperName>
        <label>Income ID</label>
        <length>50</length>
        <referenceTargetField>T_EMPLMT_INCOME__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_EMPLMT_INCOME__c</referenceTo>
        <relationshipLabel>Employment Income Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_emplmt_income_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_emplmt_income_hist__c</fullName>
        <description>idn_emplmt_income_hist</description>
        <externalDeveloperName>idn_emplmt_income_hist</externalDeveloperName>
        <label>Income ID History</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_emplmt_indiv__c</fullName>
        <description>idn_emplmt_indiv</description>
        <externalDeveloperName>idn_emplmt_indiv</externalDeveloperName>
        <label>Employment Individual ID</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_emplmt_income_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical Deleted Record</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_stubs_pay_sufft__c</fullName>
        <description>ind_stubs_pay_sufft</description>
        <externalDeveloperName>ind_stubs_pay_sufft</externalDeveloperName>
        <label>Pay Stubs</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_emplmt_indiv__c</fullName>
        <description>nbr_seq_emplmt_indiv</description>
        <externalDeveloperName>nbr_seq_emplmt_indiv</externalDeveloperName>
        <label>Employment Individual Number Sequence</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_income_emplmt__c</fullName>
        <description>nbr_seq_income_emplmt</description>
        <externalDeveloperName>nbr_seq_income_emplmt</externalDeveloperName>
        <label>Employment Income Number Sequence</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Employment Income History</label>
    <pluralLabel>Employment Income History</pluralLabel>
</CustomObject>